; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_kiic.c_kiic_setmode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_kiic.c_kiic_setmode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kiic_softc = type { i32 }

@I2C_MODE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"bad mode\00", align 1
@MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kiic_softc*, i32)* @kiic_setmode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kiic_setmode(%struct.kiic_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.kiic_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.kiic_softc* %0, %struct.kiic_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @I2C_MODE, align 4
  %8 = xor i32 %7, -1
  %9 = and i32 %6, %8
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @KASSERT(i32 %11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.kiic_softc*, %struct.kiic_softc** %3, align 8
  %14 = load i32, i32* @MODE, align 4
  %15 = call i32 @kiic_readreg(%struct.kiic_softc* %13, i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* @I2C_MODE, align 4
  %17 = xor i32 %16, -1
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* %5, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %5, align 4
  %23 = load %struct.kiic_softc*, %struct.kiic_softc** %3, align 8
  %24 = load i32, i32* @MODE, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @kiic_writereg(%struct.kiic_softc* %23, i32 %24, i32 %25)
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @kiic_readreg(%struct.kiic_softc*, i32) #1

declare dso_local i32 @kiic_writereg(%struct.kiic_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
